# gemini-fullstack-langgraph-quickstart

./: .JULES_ARCHIVE.md  .code-review-graphignore  .env.example  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_INVENTORY.md  CHROMA_FIX_PATCH.md  DEPLOY_RENDER.md  Dockerfile  GEMINI.md  GEMINI_2.5_CONFIG.md  GEMMA_CONFIG.md  GRAPH_IMPLEMENTATIONS.html  INSTALL.md  INTEGRATION_STRATEGY.md  JULES_ACTION.md  MERGE_ANALYSIS.md  MODEL_USAGE_ANALYSIS.md  OPTIMIZED_MODEL_CONFIG.md  PLANNING_MODE_TEST_SUMMARY.md  PR19_ANALYSIS.md  PR19_CONFLICT_RESOLUTION.md  PR19_FILE_DELETIONS_REVIEW.md  PR19_READY_FOR_MERGE.md  PR19_REMAINING_ISSUES.md  PR19_RESTORED_FILES.md  PR_CONFLICT_REVIEW.md  PR_DESCRIPTION.md  PR_ISSUES_ACTION_PLAN.md  PR_RESOLUTION_SUMMARY.md  PR_REVIEW_TODO.md  README.md  REBASE_SUMMARY.md  REDUNDANT.md  RESEARCH_INSPIRATIONS.md  ROADMAP.md  STATUS.md  (+57 more)
.Jules/: TASKS.md  antigravity.md  bolt.md  palette.md  sentinel.md
.gemini/: ralph-loop.local.md
.jules/: bolt.md  palette.md  sentinel.md
.trunk/: trunk.yaml
backend/: .env.example  Makefile  check_imports.py  check_path.py  coverage_report.txt  debug_imports.py  environment.yml  langgraph.json  lint_output.txt  pyproject.toml  pytest_collect_error.txt  run_tests.sh  test-agent.ipynb  validate_tests.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/docs/benchmarks/: PLAN.md
backend/examples/: cli_research.py  gemma_providers.py  kaggle_integration.py
backend/notebooks/: 01_Agent_Deep_Research.ipynb  01_SOTA_Architecture_Comparison.ipynb  02_MCP_Tools_Integration.ipynb  02_SOTA_Workflow_Analysis.ipynb  03_Benchmarking_Pipeline.ipynb  04_SOTA_Comparison.ipynb  Deep_Research_Framework_Comparison.ipynb  Search_Tool_Comparison.ipynb  agent_architecture_demo.ipynb  colab_setup.ipynb  deep_research_demo.ipynb  test-agent.ipynb
backend/plans/: test_thread_1.json
backend/scripts/: analyze_churn_plot.py  benchmark.py  check_path.py  check_rag_parity.py  debug_import.py  dev.py  extract_todos_structured.py  find_stale_unused_deps.py  generate_sample_reports.py  pruning_plan.py  test_available_models.py  test_model_availability.py  test_search.py  test_validation.py  update_active_context.py  update_all_notebooks.py  update_models.py  update_notebook_models_gemini.py  update_notebooks_gemma3.py  verify_agent_flow.py  verify_env.py  verify_imports.py  verify_security_config.py  visualize_agent_graph.py  visualize_dependencies.py
backend/src/: debug_mcp_2.py  graph_err.txt
backend/src/agent/: __init__.py  _graph.py  app.py  configuration.py  deep_search_agent.py  gemma_client.py  graph.py  graph_builder.py  kg.py  llm_client.py  mcp_client.py  mcp_config.py  mcp_persistence.py  mcp_server.py  memory_tools.py  models.py  nodes.py  orchestration.py  persistence.py  planning_router.py  prompts.py  rag.py  rag_nodes.py  rate_limiter.py  registry.py  research_tools.py  router.py  scoping_prompts.py  scoping_schema.py  security.py  state.py  string_utils.py  tool_adapter.py  tools_and_schemas.py  utils.py
backend/src/agent/graphs/: linear.py  parallel.py  planning.py  supervisor.py  upstream.py
backend/src/config/: __init__.py  app_config.py  validation.py
backend/src/evaluation/: bench.py  data.py  deep_research_bench.py  metrics.py  mle_bench.py
backend/src/observability/: README.md  config.py  langfuse.py
backend/src/rag/: chroma_store.py
backend/src/search/: __init__.py  provider.py  router.py
backend/src/search/providers/: bing_adapter.py  brave_adapter.py  duckduckgo_adapter.py  google_adapter.py  tavily_adapter.py
backend/src/tests/: test_mcp_wrapper.py
backend/test_tmp/: test_load_plan_nonexistent_retcurrent  test_load_plan_with_corrupted_current  test_load_plan_with_empty_threcurrent  test_overwrite_existing_plancurrent  test_save_and_load_plan_roundtcurrent  test_save_plan_creates_directocurrent  test_save_plan_with_complex_dacurrent  test_save_plan_with_empty_threcurrent  test_thread_id_sanitizationcurrent  test_unicode_contentcurrent
backend/test_tmp/test_overwrite_existing_plan0/: overwrite-test.json
backend/test_tmp/test_save_and_load_plan_roundt0/: test-thread-123.json
backend/test_tmp/test_save_plan_with_complex_da0/: complex-test.json
backend/test_tmp/test_thread_id_sanitization0/: testetcpasswd.json
backend/test_tmp/test_unicode_content0/: unicode-test.json
backend/tests/: README.md  TEST_COVERAGE_PR19.md  TEST_README.md  TEST_SUMMARY.md  TODO_BENCHMARKS.md  conftest.py  evaluators.py  helpers.py  test_configuration.py  test_flow_update.py  test_gemma_compatibility.py  test_graph_integration.py  test_graph_mock.py  test_input_validation.py  test_ipv6_rate_limit.py  test_kaggle_integration.py  test_mcp.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_tools.py  test_memory_tools.py  test_node_routers.py  test_nodes.py  test_nodes_helpers.py  test_notebook_logic.py  test_observability.py  test_persistence.py  test_planning.py  test_pr19_analysis_validation.py  test_proxy_security.py  test_proxy_security.py.orig  test_proxy_security.py.patch  test_proxy_security.py.rej  test_rag_nodes.py  test_rag_nodes_mock.py  test_rate_limit_logging.py  test_registry.py  test_research_tools.py  test_search_robustness.py  test_search_router.py  (+10 more)
backend/tests/agent/: test_api_security.py  test_api_security.py.orig  test_api_security.py.patch  test_checklist_verifier.py  test_llm_client.py  test_middleware_security.py  test_orchestration.py  test_rag.py  test_rate_limiter.py  test_rate_limiter_gemma.py  test_rate_limiter_proxy.py  test_string_utils.py  test_supervisor_llm.py  test_tool_adapter.py  test_utils.py  test_utils_legacy.py
backend/tests/data/: benchmark_questions.json
docs/: ACTIVE_CONTEXT.md  ARCHITECTURE_INVENTORY.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_MAP.md  GEMINI_2.5_CONFIG.md  GEMINI_2_5_MIGRATION.md  GEMINI_MODEL_MIGRATION_SUMMARY.md  GEMMA_CONFIGURATION_GUIDE.md  GRAPH_IMPLEMENTATIONS.md  ROADMAP.md  (+22 more)
(+231 files in other folders)
