[project]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    { name = "Masum Rab", email = "maum.rab@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph~=0.2.6",
    "langchain~=0.3.19",
    "langchain-core~=0.3.0",
    "langchain-google-genai==2.0.7",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi",
    "google-genai",
    "langchain-mcp-adapters==0.1.0",
    "langchain-text-splitters",
    "mcp",
    "sentence-transformers",
    "faiss-cpu",
    "chromadb>=0.4.0",
    "pandas",
    "matplotlib",
    "duckduckgo-search",
    "tenacity>=8.0.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "requests>=2.32.5",
    "langfuse",
    "numpy<2.0.0",
    "pycares<5.0.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*", "config*", "search*", "observability*", "rag*", "evaluation*"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
norecursedirs = ["scripts", ".hypothesis", ".venv", ".git"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*setName.*deprecated:DeprecationWarning",
    "ignore:.*leaveWhitespace.*deprecated:DeprecationWarning",
    "ignore:.*setParseAction.*deprecated:DeprecationWarning",
    "ignore:.*addParseAction.*deprecated:DeprecationWarning",
    "ignore:.*delimitedList.*deprecated:DeprecationWarning",
    "ignore:.*google.generativeai.*:FutureWarning",
    "ignore:.*All support for the `google.generativeai` package has ended.*:FutureWarning",
    "ignore:.*All support for the `google.generativeai` package has ended.*",
    "ignore::FutureWarning:langchain_google_genai.chat_models",
    "ignore:.*SwigPy.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
markers = [
    "extended: mark test as extended/slow",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "playwright>=1.49.0",
    "scipy",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
